Finalizing API with documentation. Not finished.
